--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# Project related stuff
+*.py[cod]
+work/
+output/
+submit/
+submit.zip
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
